VT-944: hakijaryhmän lisäykselle crud-oikeustarkistus

--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -118,7 +118,7 @@
                            ng-model="model.hakijaryhma.laskentakaavaId"
                            ng-required="!model.hakijaryhma.laskentakaavaId" auth ng-disabled="!userAccess.updateOrg">
                     {{data.nimi}} (<span
-                        ng-bind="data.id" "></span>)
+                        ng-bind="data.id"></span>)
                 </label>
             </div>
         </div>
